[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
ui = { path = "packages/ui" }
api = { path = "packages/api" }
serde = { version = "1.0", features = ["derive"] }
